<resources>
    <string name="app_name">AviaTickets</string>
    <string name="searching_cheap_tickets">Поиск дешевых\nавиабилетов</string>
    <string name="input_hint_from">Откуда - Москва</string>
    <string name="input_hint_to">Куда - Турция</string>
    <string name="title_offers">Музыкально отлететь</string>
    <string name="min_cost">от %1$d %2$d ₽</string>
    <string name="button_show_all_destinations">Показать все места</string>
    <string name="greeting">Ваш первый раз</string>
    <string name="unavailable">Недоступно</string>
    <string name="aviatickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="shorter">Короче</string>
    <string name="profile">Профиль</string>
    <string name="subscriptions">Подписки</string>
</resources>