<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <Space android:layout_width="wrap_content" android:layout_height="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="@dimen/title_1"
            android:text="@string/searching_cheap_tickets" />

        <Space android:layout_width="wrap_content" android:layout_height="40dp"/>

        <!-- Searchbar -->

        <FrameLayout
            android:id="@+id/searchbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/shape_rounded_1"
            android:backgroundTint="@color/grey_3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/shape_rounded_1"
                android:backgroundTint="@color/grey_4">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_search"
                    android:scaleType="fitCenter"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/button_text_1"
                        android:textColor="@color/grey_6"
                        android:text="@string/input_hint_from"/>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:background="@color/grey_5"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/button_text_1"
                        android:textColor="@color/grey_6"
                        android:text="@string/input_hint_to"/>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <!-- Offers -->

        <Space android:layout_width="wrap_content" android:layout_height="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textSize="@dimen/title_1"
            android:text="@string/title_offers" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_offer"/>

        <Button
            android:id="@+id/show_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/button_show_all_destinations"
            app:backgroundTint="@color/grey_3" />

        <Space android:layout_width="wrap_content" android:layout_height="32dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_1"
            android:text="@string/greeting"
            android:textColor="@color/grey_3" />

    </LinearLayout>

</ScrollView>